--- a/index.html
+++ b/index.html
@@ -1,6 +1,66 @@
-
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Researcher's Landing Page</title>
+</head>
+<body>
+  <header>
+    <h1>Ryota Nishizono</h1>
+    <h2>Research Specialist @ NTT CS Labs</h2>
+  </header>
+  <section>
+    <h3>About Me</h3>
+    <p>I am a research specialist with a focus on cognitive neuroscience, particularly interested in the dynamics of human cognition and psychological states during natural tasks.</p>
+    <p> In my 20s, I was a professional cyclist and was active in international competitions.
+    </p>
+  </section>
+  <section>
+    <h3>Publications</h3>
+    <ul>
+        <li>Sueishi, T., Nishizono, R., &amp; Ishikawa, M. (2022). EmnDash: A Robust High-Speed Spatial Tracking System Using a Vector-Graphics Laser Display with M-Sequence Dashed Markers. <em>Journal of Robotics and Mechatronics</em>, 34(5), 1085-1095.</li>
+        <li>Saijo, N., Nishizono, R., &amp; Kashino, M. (2021). Relationship between pre-driving heart rate and driving performance in formula car racing: a case study. <em>2021 43rd Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)</em>.</li>
+        <li>Nishizono, R., Saijo, N., &amp; Kashino, M. (2021). Synchronization of Spontaneous Eyeblink during Formula Car Driving. <em>ACM Symposium on Eye Tracking Research and Applications</em>, 1-6.</li>
+        <li>Nishizono, R. (2020). 現実世界と融合した eSports; バーチャル・ツール・ド・フランスを技術からひもとく. <em>情報処理</em>, 61(12), 1164-1167.</li>
+        <li>Nishizono, R. (2020). スポーツとテクノロジーの繊細な未来. <em>情報処理</em>, 61(8), 912-913.</li>
+        <li>Nishizono, R., Sueishi, T., &amp; Ishikawa, M. (2020). EmnDash: M-sequence Dashed Markers on Vector-based Laser Projection for Robust High-speed Spatial Tracking. <em>2020 IEEE International Symposium on Mixed and Augmented Reality Adjunct</em>.</li>
+      </ul>      
+  </section>
+  <section>
+    <h3>Competitive Achievements as Cyclist</h3>
+<ul>
+  <li><strong>National Championships Road Individual Time Trial</strong>
+    <ul>
+      <li>2011: 3rd</li>
+      <li>2012: 1st</li>
+      <li>2013: 2nd</li>
+      <li>2015: 3rd</li>
+      <li>2016: 1st</li>
+      <li>2017: 1st</li>
+    </ul>
+  </li>
+  <li><strong>National Championships Road Race</strong>
+    <ul>
+      <li>2011: 3rd</li>
+      <li>2016: 2nd</li>
+    </ul>
+  </li>
+  <li><strong>International Races</strong>
+    <ul>
+      <li>2x 2nd GC Tour de Hokkaido (2017, 2012)</li>
+      <li>Stage Tour de Hokkaido (2011)</li>
+      <li>7th Asian Cycling Championships Individual Time Trial</li>
+    </ul>
+  </li>
+</ul>
 
-<html>
-<h2>Ryota Nishizono</h2>
+
+  </section>
+  <section>
+    <h3>Contact</h3>
+    <p>Email: ryota.nishizono.kw # hco.ntt.co.jp (Please change # to @)</p>
+  </section>
+</body>
 </html>
