--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
   </header>
   <section>
     <h3>About Me</h3>
-    <p>I am a research specialist with a focus on cognitive neuroscience, particularly interested in the dynamics of human cognition and psychological states during natural tasks.</p>
+    <p>I am a research specialist with a focus on cognitive neuroscience, particularly interested in the dynamics of human cognition and psychological states during natural tasks. I am currently working for <a href="https://www.rd.ntt/e/cs/team_project/kdb/"><b>Kashino Diverse Brain Research Laboratory at NTT Communication Science Laboratories</b></a> </p> 
     <p> In my 20s, I was a professional cyclist and was active in international competitions.
     </p>
   </section>
   <section>
     <h3>Publications</h3>
     <ul>
-        <li>Sueishi, T., Nishizono, R., &amp; Ishikawa, M. (2022). EmnDash: A Robust High-Speed Spatial Tracking System Using a Vector-Graphics Laser Display with M-Sequence Dashed Markers. <em>Journal of Robotics and Mechatronics</em>, 34(5), 1085-1095.</li>
-        <li>Saijo, N., Nishizono, R., &amp; Kashino, M. (2021). Relationship between pre-driving heart rate and driving performance in formula car racing: a case study. <em>2021 43rd Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)</em>.</li>
-        <li>Nishizono, R., Saijo, N., &amp; Kashino, M. (2021). Synchronization of Spontaneous Eyeblink during Formula Car Driving. <em>ACM Symposium on Eye Tracking Research and Applications</em>, 1-6.</li>
-        <li>Nishizono, R. (2020). 現実世界と融合した eSports; バーチャル・ツール・ド・フランスを技術からひもとく. <em>情報処理</em>, 61(12), 1164-1167.</li>
-        <li>Nishizono, R. (2020). スポーツとテクノロジーの繊細な未来. <em>情報処理</em>, 61(8), 912-913.</li>
-        <li>Nishizono, R., Sueishi, T., &amp; Ishikawa, M. (2020). EmnDash: M-sequence Dashed Markers on Vector-based Laser Projection for Robust High-speed Spatial Tracking. <em>2020 IEEE International Symposium on Mixed and Augmented Reality Adjunct</em>.</li>
+        <li>Sueishi, T., <b>Nishizono, R.</b>, &amp; Ishikawa, M. (2022). EmnDash: A Robust High-Speed Spatial Tracking System Using a Vector-Graphics Laser Display with M-Sequence Dashed Markers. <em>Journal of Robotics and Mechatronics</em>, 34(5), 1085-1095.</li>
+        <li>Saijo, N., <b>Nishizono, R.</b>, &amp; Kashino, M. (2021). Relationship between pre-driving heart rate and driving performance in formula car racing: a case study. <em>2021 43rd Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)</em>.</li>
+        <li><b>Nishizono, R.</b>, Saijo, N., &amp; Kashino, M. (2021). Synchronization of Spontaneous Eyeblink during Formula Car Driving. <em>ACM Symposium on Eye Tracking Research and Applications</em>, 1-6.</li>
+        <li><b>Nishizono, R.</b> (2020). 現実世界と融合した eSports; バーチャル・ツール・ド・フランスを技術からひもとく. <em>情報処理</em>, 61(12), 1164-1167.</li>
+        <li><b>Nishizono, R.</b> (2020). スポーツとテクノロジーの繊細な未来. <em>情報処理</em>, 61(8), 912-913.</li>
+        <li><b>Nishizono, R.</b>, Sueishi, T., &amp; Ishikawa, M. (2020). EmnDash: M-sequence Dashed Markers on Vector-based Laser Projection for Robust High-speed Spatial Tracking. <em>2020 IEEE International Symposium on Mixed and Augmented Reality Adjunct</em>.</li>
       </ul>      
   </section>
   <section>
