--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <section>
     <h3>Publications</h3>
     <ul>
+      <li><b>Nishizono, R.</b>, Saijo, N., & Kashino, M. (2023). Highly reproducible eyeblink timing during formula car driving. <em?iScience</em>.</li>
         <li>Sueishi, T., <b>Nishizono, R.</b>, &amp; Ishikawa, M. (2022). EmnDash: A Robust High-Speed Spatial Tracking System Using a Vector-Graphics Laser Display with M-Sequence Dashed Markers. <em>Journal of Robotics and Mechatronics</em>, 34(5), 1085-1095.</li>
         <li>Saijo, N., <b>Nishizono, R.</b>, &amp; Kashino, M. (2021). Relationship between pre-driving heart rate and driving performance in formula car racing: a case study. <em>2021 43rd Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)</em>.</li>
         <li><b>Nishizono, R.</b>, Saijo, N., &amp; Kashino, M. (2021). Synchronization of Spontaneous Eyeblink during Formula Car Driving. <em>ACM Symposium on Eye Tracking Research and Applications</em>, 1-6.</li>
